Fix text overflow

--- a/app/_scss/pages/_about-page.scss
+++ b/app/_scss/pages/_about-page.scss
@@ -6,6 +6,11 @@
   line-height: 1.9em;
   letter-spacing: 0.020em;
 
+  .container {
+      width: auto;
+      min-width: auto;
+  }
+
   @media (min-width: 1200px) {
     .container {
       width: 940px;
